--- a/css/ex7_style.css
+++ b/css/ex7_style.css
@@ -5,7 +5,8 @@ body{
 .header{
     margin-bottom: 40px;
     background-image: url("../img/pattern_CV.jpg");
-    color: white;
+    color: turquoise;
+    text-shadow: -1px -1px 0 #000, 1px -1px 0 #000, -1px 1px 0 #000, 1px 1px 0 #000;
 }
 
 .user-photo{
